--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-					<mainClass>shop_management_main.ApplicationMain</mainClass>
+					<mainClass>restaurant_management_main.ApplicationMain</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
